<resources>
    <string name="app_name">Kagong</string>

    <!--SplashActivity-->
    <string name="appName">Serendipity</string>

    <!--LoginActivity-->
    <string name="kakao_login">카카오 로그인</string>
    <string name="google_login">구글 로그인</string>




    <!--EntireActivity-->
    <string name="APPNAME">SERENDIPITY</string>
    <string name="imageView_description">이미지가 열리지 않습니다.</string>
    <string name="check">확인</string>
    <string name="appNameK">세렌디피티</string>



    <!--InAgreementActivity-->
    <string name="please_inagreement">약관동의를 먼저 해주세요.</string>
    <string name="application_exit">앱을 종료하시겠습니까?</string>
    <string name="hello">어서오세요</string>
    <string name="agreement">약관동의가 필요해요</string>
    <string name="in_agreement">약관동의</string>
    <string name="entire_agreement">전체동의</string>
    <string name="kagong_inAgreement">세렌디피티 개인정보 처리방침</string>
    <string name="next">NEXT</string>
    <string name="privacy_policy">개인정보 처리방침</string>

    <!--RegisterActivity-->
    <string name="register">회원가입</string>
    <string name="basic_information">기본정보</string>
    <string name="nickname">NICKNAME</string>
    <string name="nicknameK">닉네임</string>
    <string name="validate">중복체크</string>
    <string name="validate_null">중복체크를 먼저 해주세요.</string>
    <string name="personal_information">개인정보</string>
    <string name="sex">성별</string>
    <string name="female">여성</string>
    <string name="male">남성</string>
    <string name="age">나이</string>
    <string name="previous">PREVIOUS</string>
    <string name="confirm">CONFIRM</string>
    <string name="please_select_age">연령을 선택해주세요.</string>
    <string name="please_select_sex">성별을 선택해주세요.</string>

    <!--MainActivity-->
    <string name="home">홈</string>
    <string name="schedule">일정</string>
    <string name="profile">내정보</string>
    <string name="open">Open</string>
    <string name="recommended_destination">추천 여행지</string>
    <string name="new_destination">신규 여행지</string>










    <string name="recent_search">최근</string>

    <string name="information">정보</string>
    <string name="weather">날씨</string>
    <string name="spot">관광</string>
    <string name="accompany">동행</string>

    <string name="temp_introduce">런던 하면 떠 오르는 것들은 빅벤, 타워브리지, 셰익스피어, 엘리자베스 여왕, 근위병 등이다. 런던을 상징하면서도 너무나 전형적이라 조금은 식상한 것들.
        그런 런던이 최근 확실히 변하고 있다. 오래된 도시 런던은 밀레니엄 이후로 미래를 향해 막 달려가는 모양을 하고 있다. 산업혁명과 자본주의, 의회 민주주의가 태동했던 영국. 그 심장부 런던에서
        엘리스처럼 호기심 있는 사람에게만 보이는 숨은 매력들을 찾아 보자.
    </string>
    <string name="add_schedule">일정을 추가해보세요</string>
    <string name="abbreviation_add_schedule">일정 추가</string>

    <string name="addDetail_tabLayout1">좋아요</string>
    <string name="addDetail_tabLayout2">일정</string>
    <string name="addDetail_tabLayout3">관광지</string>
    <string name="addDetail_tabLayout4">맛집</string>
    <string name="addDetail_tabLayout5">동행</string>


    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>

    <string name="detail_schedule">세부일정</string>

    <string name="travel_schedule">여행일정</string>
    <string name="network_disabled">네트워크 연결이 끊어졌습니다.\n확인 후 다시 시도해주세요.</string>
    <string name="permission_disabled">저장소 권한이 거부되었습니다.\n사용을 원하시면 설정에서 해당 권한을 직접 허용하셔야 합니다.</string>
    <string name="item_schedule_null">세렌디피티와 여행의 아름다운 여정을 계획해보세요</string>
    <string name="dash">-</string>

    <string name="edit_schedule">일정 수정</string>
    <string name="delete_schedule">일정 삭제</string>
    <string name="edit_location">경로 수정</string>
    <string name="delete_location">경로 삭제</string>
    <string name="edit_writting">글 수정</string>
    <string name="delete_writting">글 삭제</string>
    <string name="cancel">취소</string>

    <string name="item_detail_null">세부 일정을 등록해보세요.</string>
    <string name="alertdialog_title">정말 진행하시겠습니까?</string>
    <string name="alertdialog_content">삭제된 일정은 복구할 수 없습니다</string>
    <string name="written_delete_content">삭제된 글은 복구할 수 없습니다</string>
    <string name="day">DAY</string>

    <!--AddLocationActivity-->
    <string name="add_location">이동 경로 표시</string>

    <!--AddLocationActivity - AddLocationFragment-->
    <string name="departure_input">출발지 입력</string>
    <string name="arrival_input">도착지 입력</string>
    <string name="delete">삭제</string>
    <string name="addition">추가</string>

    <!--AddLocationActivity - SearchLocationFragment-->
    <string name="search_location_hint">위치를 검색해보세요</string>
    <string name="search_tourism_hint">관광지를 검색해보세요</string>
    <string name="search_goodPlace_hint">맛집을 검색해보세요</string>
    <!--<string name="mainWelcome">어디로 떠나시나요?</string>
    <string name="areaSearchHint">여행지를 검색해보세요</string>-->

    <string name="tourism">관광지</string>
    <string name="good_place">맛집</string>

    <string name="write">글쓰기</string>

    <string name="find_accompany">동행구하기</string>
    <string name="title_hint_accompany">어떤 동행을 하시고 싶으신가요?</string>
    <string name="content_hint_accompany">새로운 장소, 새로운 인연과 동행하는건 어떤가요?</string>
    <string name="select_area">지역 선택</string>
    <string name="select_board">게시판 선택</string>
    <string name="select_date">일정 등록</string>
    <string name="open_chatting">오픈채팅 URL</string>
    <string name="link_hint">오픈채팅 URL을 입력해주세요.</string>
    <string name="add_post">게시물 추가</string>

    <!--MainActivity - ProfileFragment-->
    <string name="modify_profile">프로필 확인 및 수정</string>
    <string name="setting">설정</string>
    <string name="leave_feedback">피드백을 남겨주세요</string>
    <string name="invite_friends">친구를 초대하세요</string>
    <string name="how_to_use">세렌디피티 사용법</string>
    <string name="notice">공지사항</string>
    <string name="written">내가 쓴 글</string>
    <string name="introduce">소개</string>
    <string name="modify">수정하기</string>
    <string name="introduceE">INTRODUCE</string>
    <string name="save">저장하기</string>
    <string name="introduce_hint">회원님에 대해 알 수 있도록 간략하게 자기소개를 해주세요.</string>
    <string name="hi">안녕하세요.</string>

    <string name="version_info">버전정보</string>
    <string name="terms_of_service">서비스 이용약관</string>
    <string name="privacyPolicy">개인정보 처리방침</string>
    <string name="withdrawal">회원탈퇴</string>

    <string name="trip">여행</string>

    <string name="sorry">죄송합니다</string>
    <string name="inspection">서비스 점검 중입니다 \n잠시후 다시 시도해주세요</string>

    <string name="seek_accompany">동행을 구해보세요</string>
    <string name="seek_accompany_introduce">여행지에서의 우연한 만남은\n당신의 여행을 더 뜻깊게 해줄 것입니다</string>
    <string name="seek_accompany_htu">카카오톡 오픈채팅 URL을 등록하시면,\n안전하고 빠른 동행을 구할 수 있습니다.</string>

    <string name="app_introduce1">대표 관광지 및 여행객들이\n가장 선호하는 맛집을 찾아보세요</string>
    <string name="app_introduce2">여행지에서의 우연한 만남은\n당신의 여행을 더 뜻깊게 해줄 것입니다</string>
    <string name="app_introduce3">나만의 여행지 일정을 등록하고\n손쉽게 동선을 등록할 수 있습니다</string>

    <string name="start_right_now">시작하기</string>

    <string name="application_disabled">보다 나 서비스 이용을 위해\n지금 바로 업데이트 하세요!</string>
    <string name="update_right_now">지금 업데이트</string>

    <string name="change_area">지역 변경하기</string>

    <string name="category">카테고리</string>

    <string name="review">리뷰</string>
    <string name="review_see_more">리뷰 더보기</string>
    <string name="review_null">관광지에 다녀온 리뷰를 남겨보세요!</string>
    <string name="write_review">리뷰 쓰기</string>

    <string name="location">위치</string>

    <string name="operation_time">운영시간</string>

    <string name="notice_operation_time">일정에 따라 운영시간이 다를 수 있으니 해당 홈페이지에서 다시 확인바랍니다:)</string>

    <string name="schedule_htu1">나만의 일정 플래너를 만들어보세요</string>
    <string name="schedule_htu2">나만의 여행지 일정을 등록하고\n손쉽게 동선을 등록할 수 있습니다</string>
    <string name="schedule_htu3">오른쪽 상단 메뉴를 클릭합니다</string>
    <string name="schedule_htu4">경로 수정을 클릭합니다</string>
    <string name="schedule_htu5">출발지 입력을 클릭합니다</string>
    <string name="schedule_htu6">추가하고자 하는 관광지를 선택합니다</string>
    <string name="schedule_htu7">관광지를 모두 추가하였으면,\n오른쪽 상단 버튼을 클릭합니다</string>
    <string name="schedule_htu8">끝:)</string>

    <string name="stamp">STAMP</string>

    <string name="not_validate_address">유효한 오픈채팅 URL이 아닙니다.</string>
    <string name="without_spaces">빈 칸 없이 입력하세요.</string>

</resources>
