<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
                name="iViewModel"
                type="com.tistory.jeongs0222.kagongapplication.ui.inareement.InAgreementViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/entire_constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite">

        <ImageView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:src="@drawable/ic_close_black_24dp"
                android:onClick="@{() -> iViewModel.closeClickEvent()}"
                android:contentDescription="@string/imageView_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/null2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_marginStart="20dp"
                android:text="@string/hello"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:fontFamily="@font/nanumotfb"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cancel"/>

        <TextView
                android:id="@+id/null3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agreement"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="@font/nanumotfb"
                app:layout_constraintStart_toStartOf="@id/null2"
                app:layout_constraintTop_toBottomOf="@id/null2"/>

        <TextView
                android:id="@+id/null4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/entire_agreement"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:fontFamily="@font/nanumotfr"
                app:layout_constraintTop_toTopOf="@id/null3"
                app:layout_constraintEnd_toStartOf="@id/entire_check"
                app:layout_constraintBottom_toBottomOf="@id/null3"/>

        <ImageView
                android:id="@+id/entire_check"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                android:onClick="@{() -> iViewModel.entireClickEvent()}"
                app:agreementUrl="@{iViewModel.agreement}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/null4"
                app:layout_constraintBottom_toBottomOf="@id/null4"
                android:contentDescription="@string/imageView_description"
                tools:src="@drawable/ic_check_black_24dp"/>

        <TextView
                android:id="@+id/null5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:padding="20dp"
                android:text="@string/kagong_inAgreement"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/nanumotfr"
                android:onClick="@{() -> iViewModel.privacyPolicyClickEvent()}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/null3"/>

        <ImageView
                android:id="@+id/kagong_check"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginEnd="10dp"
                android:padding="10dp"
                app:agreementUrl="@{iViewModel.agreement}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/null5"
                app:layout_constraintBottom_toBottomOf="@id/null5"
                android:contentDescription="@string/imageView_description"
                tools:src="@drawable/ic_check_black_24dp"/>

        <TextView
                android:id="@+id/null6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginEnd="30dp"
                android:padding="15dp"
                android:text="@string/next"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:fontFamily="@font/goyang"
                android:onClick="@{() -> iViewModel.nextClickEvent()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>