<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite">
    
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/center_guideline"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

    <ImageView
            android:id="@+id/picture_item"
            android:layout_width="0dp"
            android:layout_height="550dp"
            android:contentDescription="@string/imageView_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:src="@drawable/app_intro1"/>

    <TextView
            android:id="@+id/introduce_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="280dp"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:fontFamily="@font/goyang"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/center_guideline"
            tools:text="@string/app_introduce1"/>

    <TextView
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPink"
            android:padding="20dp"
            android:textStyle="bold"
            android:textSize="12sp"
            android:fontFamily="@font/goyang"
            android:visibility="gone"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/picture_item"
            android:text="@string/start_right_now"
            tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>